# KUEater-Agent

./: .gitignore  .gitmodules  LICENSE  README.md  example.env  pyproject.toml
data/: LICENSE  menuitems-27032025.csv  stalls-27032025.csv
scripts/: database_populate_sql.py  generate_protocol.py  generate_tensors_for_common_keywords.py  ingredient_scores_sql.py
src/: server.py
src/model/: __init__.py  data_utils.py  encoder.py  recommendations.py  transformer.py
src/rpc/: __init__.py  service.py
